--- a/FeatureExtractionCpp/FeatureExtractionCpp.vcxproj
+++ b/FeatureExtractionCpp/FeatureExtractionCpp.vcxproj
@@ -147,11 +147,13 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="FindHaemorages.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FeatureExtractionCpp.cpp" />
+    <ClCompile Include="FindHaemorages.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
