--- a/FeatureExtractionCpp/FeatureExtractionCpp.vcxproj.filters
+++ b/FeatureExtractionCpp/FeatureExtractionCpp.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FindHaemorages.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="FeatureExtractionCpp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FindHaemorages.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
