Adding map creation for two histograms.

--- a/FeatureExtractionCpp/FeatureExtractionCpp.vcxproj.filters
+++ b/FeatureExtractionCpp/FeatureExtractionCpp.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Stopwatch.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="HistogramNormalize.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
