--- a/FeatureExtractionCpp/FeatureExtractionCpp.vcxproj
+++ b/FeatureExtractionCpp/FeatureExtractionCpp.vcxproj
@@ -150,7 +150,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="HaemoragingImage.hpp" />
-    <ClInclude Include="HsvManipulations.h" />
+    <ClInclude Include="HistogramNormalize.hpp" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Stopwatch.hpp" />
     <ClInclude Include="targetver.h" />
