--- a/FeatureExtractionCpp/FeatureExtractionCpp.vcxproj.filters
+++ b/FeatureExtractionCpp/FeatureExtractionCpp.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="HistogramNormalize.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="dirent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
